add (coming soon) labels for Code and Data

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
   <title>UniDomain: Pretraining a Unified PDDL Domain from Real-World Demonstrations for Generalizable Robot Task Planning</title>
-  <link rel="icon" href="data:;base64,iVBORw0KGgo=?v=2">
+  <!-- <link rel="icon" type="image/x-icon" href="static/images/favicon.ico"> -->
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
@@ -56,19 +56,20 @@
             <div class="is-size-5 publication-authors">
             </div>
             <div class="buttons is-centered" style="margin-top: 1.5em;">
-            <a class="button has-text-white has-background-black is-rounded" href="">
-              <span class="icon"><i class="fas fa-file-pdf"></i></span>
-              <span>Paper</span>
-            </a>
-            <a class="button has-text-white has-background-black is-rounded" href="">
-              <span class="icon"><i class="fab fa-github"></i></span>
-              <span>Code</span>
-            </a>
-            <a class="button has-text-white has-background-black is-rounded" href="">
-              <span class="icon"><i class="fas fa-database"></i></span>
-              <span>Data</span>
-            </a>
-          </div>
+              <a class="button has-text-white has-background-black is-rounded" href="">
+                <span class="icon"><i class="fas fa-file-pdf"></i></span>
+                <span>Paper</span>
+              </a>
+              <a class="button has-text-white has-background-black is-rounded" href="">
+                <span class="icon"><i class="fab fa-github"></i></span>
+                <span>Code <small style="font-size: 75%; color: #ccc;">(coming soon)</small></span>
+              </a>
+              <a class="button has-text-white has-background-black is-rounded" href="">
+                <span class="icon"><i class="fas fa-database"></i></span>
+                <span>Data <small style="font-size: 75%; color: #ccc;">(coming soon)</small></span>
+              </a>
+            </div>
+
 
           </div>
         </div>
